--- a/back_m4/.env.development
+++ b/back_m4/.env.development
@@ -3,3 +3,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=admin
+CLOUDINARY_CLOUD_NAME=ddervgjb9
+CLOUDINARY_API_SECRET=308zgv-8YYV6S9mQougYX6UGhtU
+CLOUDINARY_API_KEY=971218285586586
