--- a/back_m4/.env.development
+++ b/back_m4/.env.development
@@ -6,3 +6,4 @@ DB_PASSWORD=admin
 CLOUDINARY_CLOUD_NAME=ddervgjb9
 CLOUDINARY_API_SECRET=308zgv-8YYV6S9mQougYX6UGhtU
 CLOUDINARY_API_KEY=971218285586586
+JWT_SECRET=secret
