--- a/back_m4/.env.development
+++ b/back_m4/.env.development
@@ -7,3 +7,7 @@ CLOUDINARY_CLOUD_NAME=ddervgjb9
 CLOUDINARY_API_SECRET=308zgv-8YYV6S9mQougYX6UGhtU
 CLOUDINARY_API_KEY=971218285586586
 JWT_SECRET=secret
+AUTH0_SECRET=NjMvSu9yWPixVdvbRU9FFXjFXoWcdCSOqIMAj-Ws-Ik0YzKuVyU9b0jvMhRiSE4Y
+AUTH0_AUDIENCE=http://localhost:3000
+AUTH0_CLIENT_ID=wLlG1KN2upncpRljIAnbwLIQf1WTMcF8
+AUTH0_BASE_URL=https://dev-md7dr4y44z6j0oe5.us.auth0.com
