--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,10 @@
-# docker-compose.yml
-# docker compose up
-
 version: '3.8'
 
 services:
    nestapp:
-     image: fgp555/homework-m4:latests
+     image: fgp555/homework-m4:latest
      ports:
-       - "3000:3000"
+       - "3001:3000"
      env_file:
        - .env.development
      depends_on:
