--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
-# .env.development
+# cambiar el nombre de este archivo a .env.development
 
-DB_DATABASE=m4_hw_back
-DB_HOST=postgresdb
+DB_NAME=m4_hw_back
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=admin
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_SECRET=
-CLOUDINARY_API_KEY=
 JWT_SECRET=secret
-AUTH0_SECRET=
-AUTH0_AUDIENCE=http://localhost:3000
-AUTH0_CLIENT_ID=
-AUTH0_BASE_URL=
+
+CLOUDINARY_CLOUD_NAME=ddervg000
+CLOUDINARY_API_SECRET=308zgv-8YYV6S9mQougYX6UG000
+CLOUDINARY_API_KEY=971218285586000
 POSTGRES_DB=m4_hw_back
 POSTGRES_PASSWORD=admin
